Fix Header-Intro component collapsing.
Components after the Header-Intro component would be displayed just below the background gradient. This is caused by tables that hold the email content running over the background div.

I found a fix by applying the background div to the main container element that will render the entire email, and having the entire email break out of this div to display.

--- a/src/assets/scss/_overrides.scss
+++ b/src/assets/scss/_overrides.scss
@@ -18,6 +18,10 @@ table, th, tbody, tr, td {
   background-color: transparent;
   vertical-align: inherit;
 }
+table.body {
+  background: transparent;
+  background-color: transparent;
+}
 
 td {
   hyphens: initial;
